syntax = "proto3";

import "erc20.proto";
import "common.proto";
import "store.proto";

package messari.dex_amm.v3_0_3;

message DataSources {
  repeated DataSource data_sources = 1;
}

message DataSource {
  DataSourceType data_source_type = 1;
  bytes address = 2;
}

enum DataSourceType {
  UniswapV3Pool = 0;
  UniswapV3Factory = 1;
}

message MappedDataSources {
  repeated PrunedTransaction pruned_transactions = 1;
  repeated messari.store.v1.StoreInstruction store_instructions = 2;
}

message PrunedTransaction {
  bytes to = 1;
  bytes from = 2;
  bytes hash = 3;
  messari.common.v1.BigInt nonce = 4;
  messari.common.v1.BigInt gas_limit = 5;
  messari.common.v1.BigInt gas_used = 6;
  messari.common.v1.BigInt gas_price = 7;

  repeated EntityCreation entity_creations = 8;
}

message EntityCreation {
  oneof type {
    DexAmmProtocolEntityCreation dex_amm_protocol_entity_creation = 1;
    LiquidityPoolEntityCreation liquidity_pool_entity_creation = 2;
    LiquidityPoolFeeEntityCreation liquidity_pool_fee_entity_creation = 3;
    TokenEntityCreation token_entity_creation = 4;
    SwapEntityCreation swap_entity_creation = 5;
    DepositEntityCreation deposit_entity_creation = 6;
    WithdrawEntityCreation withdraw_entity_creation = 7;
  }
}

message DexAmmProtocolEntityCreation {
  string protocol_address = 1;
  string name = 2;
  string slug = 3;
  string schema_version = 4;
  string subgraph_version = 5; 
  string methodology_version = 6;
  string network = 7;
  string type = 8;
}

message LiquidityPoolEntityCreation {
  bytes protocol = 1;
  bytes pool_address = 2;
  repeated bytes input_tokens = 3;
  repeated string input_token_symbols = 4;
  repeated messari.common.v1.BigDecimal input_token_weights = 5;
  repeated bytes reward_tokens = 6;
  repeated bytes fees = 7;
  bool is_single_sided = 8;
  optional messari.common.v1.BigInt tick = 9;
  optional bytes liquidity_token = 10;
  optional string liquidity_token_type = 11;
}

message LiquidityPoolFeeEntityCreation {
  bytes pool_address = 1;
  string fee_type = 2;
  messari.common.v1.BigDecimal fee_percentage = 3;
}

message TokenEntityCreation {
  bytes token_address = 1;
  string name = 2;
  string symbol = 3;
  int32 decimals = 4;
} 

message DepositEntityCreation {
  bytes protocol = 1;
  bytes pool = 2;
  bytes account = 3;
  optional bytes position = 4;  
  messari.common.v1.BigInt liquidity = 5;
  repeated bytes input_tokens = 6;
  repeated messari.common.v1.BigInt input_token_amounts = 7;
  optional messari.common.v1.BigInt tick_lower = 8;
  optional messari.common.v1.BigInt tick_upper = 9;
  messari.common.v1.BigInt log_index = 10;
  messari.common.v1.BigInt log_ordinal = 11;
}

message WithdrawEntityCreation {
  bytes protocol = 1;
  bytes pool = 2;
  bytes account = 3;
  optional bytes position = 4;  
  messari.common.v1.BigInt liquidity = 5;
  repeated bytes input_tokens = 6;
  repeated messari.common.v1.BigInt input_token_amounts = 7;
  optional messari.common.v1.BigInt tick_lower = 8;
  optional messari.common.v1.BigInt tick_upper = 9;
  messari.common.v1.BigInt log_index = 10;
  messari.common.v1.BigInt log_ordinal = 11;
}

message SwapEntityCreation {
  bytes protocol = 1;
  bytes pool = 2;
  bytes account = 3;
  repeated bytes input_tokens = 4;
  repeated messari.common.v1.BigInt amounts =  5;
  messari.common.v1.BigInt liquidity = 6;
  optional messari.common.v1.BigInt tick = 7;
  messari.common.v1.BigInt log_index = 8;
  messari.common.v1.BigInt log_ordinal = 9;
}
